--- a/src/Product.css
+++ b/src/Product.css
@@ -10,6 +10,12 @@
   min-width: 100px;
   background-color: white;
   z-index: 1;
+  transition: all 0.3s ease-in;
+}
+
+.product:hover {
+  transform: scale(1.05);
+  transition: all 0.3s ease-out;
 }
 
 .product > img {
